--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="light">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +10,13 @@
         <link rel="shortcut icon" href="img/favicon.ico">
         <title>Zheming Gao</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/font-awesome.min.css" rel="stylesheet">
+        <link href="css/fontawesome.min.css" rel="stylesheet">
+        <link href="css/brands.min.css" rel="stylesheet">
+        <link href="css/solid.min.css" rel="stylesheet">
+        <link href="css/v4-font-face.min.css" rel="stylesheet">
         <link href="css/base.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css">
+        <link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" >
+        <link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css" disabled>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/languages/yaml.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/languages/rust.min.js"></script>
@@ -24,7 +28,7 @@
             <div class="container">
                 <a class="navbar-brand" href=".">Zheming Gao</a>
                 <!-- Expander button -->
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse">
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -32,23 +36,26 @@
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                         <!-- Main navigation -->
                         <ul class="nav navbar-nav">
-                            <li class="navitem active">
-                                <a href="." class="nav-link">Home</a>
+                            <li class="nav-item">
+                                <a href="." class="nav-link active" aria-current="page">Home</a>
                             </li>
-                            <li class="navitem">
+                            <li class="nav-item">
                                 <a href="pub/" class="nav-link">Publications</a>
                             </li>
-                            <li class="navitem">
+                            <li class="nav-item">
                                 <a href="teach/" class="nav-link">Teaching</a>
                             </li>
-                            <li class="navitem">
-                                <a href="research/" class="nav-link">Research</a>
+                            <li class="nav-item">
+                                <a href="group/" class="nav-link">Group</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="service/" class="nav-link">Service</a>
                             </li>
                         </ul>
 
-                    <ul class="nav navbar-nav ml-auto">
+                    <ul class="nav navbar-nav ms-md-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link" data-toggle="modal" data-target="#mkdocs_search_modal">
+                            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#mkdocs_search_modal">
                                 <i class="fa fa-search"></i> Search
                             </a>
                         </li>
@@ -69,32 +76,32 @@
 
         <div class="container">
             <div class="row">
-                    <div class="col-md-3"><div class="navbar-light navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
+                    <div class="col-md-3"><div class="navbar-expand-md bs-sidebar hidden-print affix" role="complementary">
     <div class="navbar-header">
-        <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#toc-collapse" title="Table of Contents">
+        <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-bs-target="#toc-collapse" title="Table of Contents">
             <span class="fa fa-angle-down"></span>
         </button>
     </div>
 
     
-    <div id="toc-collapse" class="navbar-collapse collapse card bg-secondary">
+    <div id="toc-collapse" class="navbar-collapse collapse card bg-body-tertiary">
         <ul class="nav flex-column">
             
-            <li class="nav-item" data-level="1"><a href="#zheming-gao" class="nav-link">Zheming Gao (高哲明)</a>
+            <li class="nav-item" data-bs-level="1"><a href="#zheming-gao" class="nav-link">Zheming Gao</a>
               <ul class="nav flex-column">
-            <li class="nav-item" data-level="2"><a href="#about" class="nav-link">About</a>
-              <ul class="nav flex-column">
-              </ul>
-            </li>
-            <li class="nav-item" data-level="2"><a href="#education" class="nav-link">Education</a>
+            <li class="nav-item" data-bs-level="2"><a href="#education" class="nav-link">Education</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#contact" class="nav-link">Contact</a>
+            <li class="nav-item" data-bs-level="2"><a href="#work-experience" class="nav-link">Work Experience</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#useful-links" class="nav-link">Useful links</a>
+            <li class="nav-item" data-bs-level="2"><a href="#awards-and-honors" class="nav-link">Awards and Honors</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-bs-level="2"><a href="#contact" class="nav-link">Contact</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -105,22 +112,22 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
+<p><head>
+    <meta charset="UTF-8">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Personal homepage of Dr. Zheming Gao">
+    <meta name="keywords" content ="Zheming Gao, Rice, UNC Charlotte, operations research, machine learning, optimization, NC State">
+</head></p>
 <p><img align="right" src="img/bio3.jpg" width="200"></p>
-<h1 id="zheming-gao">Zheming Gao (高哲明)</h1>
-<p>Assistant Professor<br />
-  College of Information Science and Engineering<br />
-<a href="http://english.neu.edu.cn/">Northeastern University</a> (Shenyang, China)</p>
-<h2 id="about">About</h2>
-<p>Zheming Gao joined the College of Information Science and Engineering at Northeastern University (CN) in 2021. 
-He currently works on</p>
+<h1 id="zheming-gao">Zheming Gao</h1>
+<p>I am a Postdoctoral Research Associate in the Department of Statistics at Rice University (with <a href="https://www.ericchi.com/">Dr. Eric Chi</a>). My research focuses on</p>
 <ul>
+<li>Numerical optimization and algorithm design</li>
 <li>Methodologies of machine learning </li>
 <li>Optimization theories</li>
-<li>Numerical optimization and algorithm design</li>
-<li>Operations management  </li>
 </ul>
-<p>with applications to financial risk forecasting, supply chain management, healthcare, and other areas of data analytics and optimization. 
-His work is highly interdisciplinary. He is looking to collaborate with researchers from engineering, mathematics, computer science, and medicine.</p>
+<p>with applications to healthcare, energy, and other areas of data analytics and optimization. </p>
+<p>My research work is highly interdisciplinary. I am always looking to collaborate with researchers from engineering, mathematics, computer science, and medicine.</p>
 <h2 id="education">Education</h2>
 <ul>
 <li>Ph.D., Operations Research, North Carolina State University, 2020.<br />
@@ -129,22 +136,28 @@ His work is highly interdisciplinary. He is looking to collaborate with research
 <li>M.S., Mathematics, Texas A&amp;M University, 2016.  </li>
 <li>B.S., Mathematics, Beihang University, 2015.</li>
 </ul>
+<h2 id="work-experience">Work Experience</h2>
+<ul>
+<li>Postdoctoral Associate, Department of Statistics, Rice University, 2024-present.</li>
+<li>Assistant Professor, College of Information Science and Engineering, Northeastern University (Shenyang), 2021-2024.</li>
+</ul>
+<h2 id="awards-and-honors">Awards and Honors</h2>
+<ul>
+<li>Excellent Faculty Award, College of Information Science and Engineering, Northeastern University (2022)</li>
+<li>Salah E. Elmaghraby Distinguished Student Award, Graduate Program in Operations Research at NC State University (2019)</li>
+<li>Third Place in the RAS Problem Solving Competition, INFORMS (with Jin Xu, Haochen Luo and Qian Wu, 2018)</li>
+</ul>
 <h2 id="contact">Contact</h2>
-<p><strong>Email:</strong>  gaozheming at neu dot edu dot cn</p>
-<h2 id="useful-links">Useful links</h2>
-<p><a href="https://scholar.google.com/citations?user=jfM50lsAAAAJ&amp;hl=en&amp;oi=ao">Zheming Gao's Google Scholar webpage</a></p>
-<p><a href="https://www.ise.ncsu.edu/fuzzy-neural/">Fangroup</a></p>
-<p><a href="https://github.com/tonygaobasketball/">Zheming's github page</a></p></div>
+<p><strong>Email:</strong>  zheming [dot] gao [at] rice [dot] edu</p></div>
             </div>
         </div>
 
         <footer class="col-md-12">
             <hr>
-                <p>Copyright &copy; Zheming Gao 2021</p>
+                <p>Copyright &copy; Zheming Gao 2021-2025</p>
             <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
         </footer>
-        <script src="js/jquery-3.6.0.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.bundle.min.js"></script>
         <script>
             var base_url = ".",
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
@@ -157,7 +170,7 @@ His work is highly interdisciplinary. He is looking to collaborate with research
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" id="searchModalLabel">Search</h4>
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <p>From here you can search these documents. Enter your search terms below.</p>
@@ -177,7 +190,7 @@ His work is highly interdisciplinary. He is looking to collaborate with research
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" id="keyboardModalLabel">Keyboard Shortcuts</h4>
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
               <table class="table">
@@ -217,6 +230,6 @@ His work is highly interdisciplinary. He is looking to collaborate with research
 </html>
 
 <!--
-MkDocs version : 1.5.3
-Build Date UTC : 2023-10-06 12:08:32.725398+00:00
+MkDocs version : 1.6.1
+Build Date UTC : 2025-03-07 19:32:37.132747+00:00
 -->
